--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
+    ext.kotlin_version = "1.4.32"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
-        classpath 'com.android.tools.build:gradle:7.0.0-beta01'
+        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
 
