--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
     implementation 'androidx.fragment:fragment-ktx:1.3.4'
 
+    implementation "com.github.kirich1409:viewbindingpropertydelegate:1.4.6"
+
+    implementation 'com.google.android.material:material:1.3.0'
+
 
 }
