--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.trainingdiary">
 
     <application
-        android:name=".PlannerApp"
+        android:name=".DiaryApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_my_launcher"
         android:label="@string/app_name"
