--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,5 +86,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
 
+    implementation 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+
 
 }
