--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.trainingdiary">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".DiaryApp"
@@ -10,7 +9,8 @@
         android:roundIcon="@drawable/ic_my_launcher_circle"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrainingDiary">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
